[package]
name = "tsim"
version = "0.1.0"
authors = ["Andrii Logoshko <forando@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool to mesure similarities between texts"
readme = "README.md"
repository = "https://github.com/forando/tsim"
keywords = ["cli", "text", "similarity"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3.13"
indicatif = "0.15.0"
term_size = "0.3.2"
anyhow = "1.0"
csv = "1.1"
regex = "1"
num_cpus = "1.13.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"